deleted old, unnecessary view files; fixed search categories in Index files

--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -60,6 +60,8 @@
         controllerName: "LogException",
         routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
         htmlAttributes: new { @class = "btn btn-default" })
+
+        @Html.ActionLink("Advanced Search", "AdvancedSearch", "LogException");
     }
 </div>
 
