--- a/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
@@ -23,7 +23,10 @@
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
     searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+    searchCategories.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+    searchCategories.Add(new SelectListItem { Text = "Web Request ID", Value = "WebRequestID" });
     searchCategories.Add(new SelectListItem { Text = "Status", Value = "Status" });
+    searchCategories.Add(new SelectListItem { Text = "Redirect Location", Value = "RedirectLocation" });
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
 
