--- a/InternshipSkeleton/Views/LogMySql/Index.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/Index.cshtml
@@ -23,9 +23,10 @@
     bool noResults = (Model.TotalItems) == 0;
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
+    searchCategories.Add(new SelectListItem { Text = "Time Stamp", Value = "DateTimeStamp" });
+    searchCategories.Add(new SelectListItem { Text = "Function", Value = "Function" });
     searchCategories.Add(new SelectListItem { Text = "Message", Value = "Message" });
     searchCategories.Add(new SelectListItem { Text = "Type", Value = "Type" });
-    searchCategories.Add(new SelectListItem { Text = "Function", Value = "Function" });
     searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
 
