--- a/InternshipSkeleton/Views/LogException/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogException/AdvancedSearch.cshtml
@@ -1,4 +1,8 @@
 ﻿<!-- LogException Advanced Search page -->
+@using AsignioInternship.Data.CombinedLogException
+@using AsignioInternship.Data
+
+@model PagedDataModelCollection<CombinedLogExceptionDataModel>
 
 @{
     ViewBag.Title = "AdvancedSearch";
@@ -8,44 +12,54 @@
 <h2>Log Exception - Advanced Search</h2>
 
 <!-- Email, Timestamp, Message, Method Name, Source, Stack Trace, Important (both IsImportant? and who marked as important) -->
-<!-- Email - string search -->
+<!-- Email, Message, MethodName, Source, StackTrace - string search -->
 <!-- Timestamp - enter a range of dates -->
-<!-- Message - string search-->
-<!-- MethodName - string search-->
-<!-- Source - string search -->
-<!-- StackTrace - string search -->
 <!-- Important - check box for IsImportant? and string search for user who marked as important -->
-<!-- make a dictionary of keys (category) and values (user-entered), send that to controller (need new Index method which takes this
-    dictionary as input?)/could also add as a parameter in the current Index method -->
 <!-- https://alexkuznetsov.wordpress.com/2013/05/08/asp-net-mvc-pass-dictionary-data-from-view-to-controller/ -->
 
-<table id="SearchTable">
+<!--<table id="SearchTable">
     <tr>
         <td>EmailAddress</td>
-        <td>@Html.TextBox("EmailAddress")</td>
+        <td>Html.TextBox("EmailAddress")</td>
     </tr>
     <tr>
-        <td>TimeStamp: </td>
-        <td>@Html.TextBox("TimeStamp")</td>
+        <td>TimeStamp</td>
+        <td>Html.TextBox("TimeStamp")</td>
     </tr>
     <tr>
         <td>Message</td>
-        <td>@Html.TextBox("Message")</td>
+        <td>Html.TextBox("Message")</td>
     </tr>
     <tr>
         <td>MethodName</td>
-        <td>@Html.TextBox("MethodName")</td>
+        <td>Html.TextBox("MethodName")</td>
     </tr>
     <tr>
         <td>Source</td>
-        <td>@Html.TextBox("Source")</td>
+        <td>Html.TextBox("Source")</td>
     </tr>
     <tr>
         <td>StackTrace</td>
-        <td>@Html.TextBox("StackTrace")</td>
+        <td>Html.TextBox("StackTrace")</td>
     </tr>
 </table>
-<input id="SendToControllerButton" type="button" value="Search" />
+<input id="SendToControllerButton" type="button" onClick="displayResults()" value="Search" /> -->
+
+@using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "IndexToo", id = Model.PageNumber }))
+{
+    @Html.HiddenFor(m => m.SortBy)
+    @Html.HiddenFor(m => m.SortDirection)
+    @Html.HiddenFor(m => m.SearchBy)
+    @Html.HiddenFor(m => m.SearchInput)
+
+    foreach (KeyValuePair<string, string> entry in Model.SearchDictionary)
+    {
+        @Html.Label(entry.Key)
+        @Html.TextBoxFor(m=>m.SearchDictionary[entry.Key])
+    }
+
+    <input type="submit" name="btnSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
+}
 
 <script>
     $(document).ready(function () {
@@ -63,18 +77,21 @@
                 data["searchDictionary[" + index + "].Value"] = textboxValue;
             });
 
-            /* var id = 1;
-            var sortBy = "TimeStamp";
-            var sortDir = "ASC"; */
-
             $.ajax({
                 type: "POST",
                 data: data,
                 url: "@Url.Action("IndexToo", "LogException")",
                 success: function (response) {
                     //window.location = response.url;
+                    //alert(response);
+                    window.location = @Url.Action("IndexToo", "LogException", new { })
                 }
             });
+
         });
     });
+
+    function displayResults() {
+
+    }
 </script>
