--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -18,6 +18,7 @@
     var sortBy = Model.SortBy;
     var sortDir = Model.SortDirection;
     var id = Model.PageNumber;
+    var searchDir = Model.SearchDictionary;
 
     List<String> categories = new List<String>() { "EmailAddress", "TimeStamp", "WebRequestID", "Message", "MethodName", "Source", "StackTrace", "Important" };
 
@@ -61,28 +62,28 @@
         routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
         htmlAttributes: new { @class = "btn btn-default" })
 
-        @Html.ActionLink("Advanced Search", "AdvancedSearch", "LogException");
     }
+    <!-- Html.ActionLink("Advanced Search", "AdvancedSearch", "LogException", new { log = Model }); -->
+
+    @using (Html.BeginRouteForm(new { controller = "LogException", action = "AdvancedSearch" }))
+    {
+        @Html.HiddenFor(m => m.SortBy)
+        @Html.HiddenFor(m => m.SortDirection)
+        @Html.HiddenFor(m => m.SearchBy)
+        @Html.HiddenFor(m => m.SearchInput)
+        @Html.HiddenFor(m => m.SearchDictionary)
+        <input type="submit" name="btnSubmit" value="Advanced Search" class="btn btn-default" style="display: inline-block;" />
+    }
+
+    @Html.ActionLink(linkText: "Advanced Search",
+    actionName: "AdvancedSearch",
+    controllerName: "LogException",
+    routeValues: new { searchDirectory = searchDir}, // I think a good thing to try would be making AdvancedSearch not 
+                      //take any inputs, and just send the user-inputted dictionary of values from there to the controller without ajax
+    htmlAttributes: new { @class = "btn btn-default" })
+
 </div>
 
-    <!-- (at)using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }, FormMethod.Post, new { id = "id" }))
-    { 
-    <div class="block" style="width: 25% !important; display: inline-block;">
-        (at)Html.Label("Sort by: ", new { (at)class = "mylabel" })
-        (at) Html.DropDownList("sortBy", listItems, new { (at)class = "mydropdown" })
-    </div>
-        Html.Label("Ascending", new { class="mylabel" })
-        Html.RadioButton("sortDir", "ASC", true)
-
-        Html.Label("Descending", new { class = "mylabel" })
-        Html.RadioButton("sortDir", "DESC")
-        
-        Html.HiddenFor(m => m.SearchBy)
-        Html.HiddenFor(m => m.SearchInput)
-        <input type="submit" name="btnSubmit" value="Sort" class="btn btn-default" style="width: 50px; display: inline-block;" />
-    }
-</div>
--->
 <br />
 
 <!-- Paging stuff -->
